# AIOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  aios.system  aios_system.json  bump-patch.sh  hello.system  kernel  readme_report.text  settings-rpi4.cmake  settings.cmake  version.sh  virt_off.dtb  virt_on.dtb
build-04/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qemu-arm-virt.dtb  qemu-arm-virt.dts
build-04/elfloader-tool/: archive.archive.o.cpio  cmake_install.cmake  elfloader  linker.lds_pp  rootserver
build-04/images/: aios_root-image-arm-qemu-arm-virt
build-04/kernel/: cmake_install.cmake  dts.cmd  gen_header.cmd  kernel.dtb  kernel.dts  kernel_all.i  kernel_all_copy.c  kernel_all_pp_prune.c  kernel_all_pp_prune_wrapper_temp.c  linker.lds_pp
build-04/libsel4/: cmake_install.cmake
build-04/sbase/: basename  cal  cat  chgrp  chmod  chown  chroot  cksum  cmp  comm  cp  cut  date  dc  dd  dirname  du  echo  env  expand  expr  false  find  fold  grep  head  hostname  join  kill  link  ln  logger  logname  ls  md5sum  mkdir  mkfifo  mktemp  mv  nice  (+39 more)
disk/: license.txt
disk/etc/: motd  passwd  services.conf
disk/rpi4-eeprom/: pieeprom.sig
docs/: 0.2.0.SANDBOX_ARCHITECTURE.md  AI_BRIEFING.md  AI_BRIEFING_LINUX.md  AI_SONNET_Handover.md  ARCHITECTURE.md  BACKLOG_20260406.md  BACKLOG_20260406a.md  BUILDING_ENVIRO_LINUX.md  DASH_PORT.md  DESIGN_0.4.md  DESIGN_FORK.md  DESIGN_NET.md  DESIGN_RPI.md  DESIGN_TCC.md  DESIGN_TTY.md  DESIGN_USB_HID.md  DESIGN_ZSH.md  DEVELOPMENT_PROTOCOL.md  ENVIRONMENT_BUILD.md  FORK_IMPLEMENTATION_v2.md  FORK_SAVEPOINT.md  LEARNINGS.md  NEXT_20260405.md  NEXT_20260406.md  NEXT_20260407.md  NEXT_20260407c.md  NEXT_20260407d.md  NEXT_20260407e.md  NEXT_20260407i.md  NEXT_20260408.md  NEXT_20260408a.md  NEXT_20260409b.md  NEXT_20260410a.md  NEXT_20260410b.md  NEXT_20260411a.md  NEXT_20260411c.md  NEXT_20260411g.md  NEXT_20260411h.md  NEXT_20260412a.md  NEXT_20260412b.md  (+22 more)
docs/archive/: FORK_IMPLEMENTATION.md  NEXT_20260407.md  NEXT_20260407b.md  NEXT_20260407f.md  NEXT_20260407g.md  NEXT_20260407h.md  NEXT_20260407j.md  NEXT_20260407k.md  NEXT_20260407l.md  NEXT_20260407m.md  NEXT_20260408b.md  NEXT_20260408c.md  NEXT_20260408d.md  NEXT_20260408e.md  NEXT_20260408f.md  NEXT_20260409a.md  NEXT_20260410a.md  NEXT_20260411b.md  NEXT_20260411d.md  NEXT_20260411e.md  NEXT_20260411f.md  SESSION_2026_04_06b.md  SESSION_2026_04_06c.md  SESSION_2026_04_06d.md  SESSION_2026_04_06e.md  SESSION_SUMMARY.md
docs/patches/: musl-gcc15.md  platsupport-warning.md
hw/rpi4/: BOOT_NOTES.md  config.txt  relocator.S
include/: posix.h  virtio.h
include/aios/: aios.h  aios_auth.h  aios_log.h  aios_signal.h  async_ipc.h  auth.h  channels.h  config.h  ext2.h  fb_console.h  gpu.h  hw_info.h  ipc.h  log.h  log_ipc.h  net.h  procfs.h  ring.h  root_shared.h  syscalls_t.h  tty.h  version.h  vfs.h  vka_audit.h
libc/: pthread_stubs.c  setjmp.S
libc/include/: dlfcn.h  errno.h  pwd.h  stdint.h  string.h  time.h  unistd.h
libc/src/: posix.c  semaphore.c  stdio.c  string.c
programs/: Makefile  aios.h  cat.c  cat.elf  cp.c  cp.elf  daemon.c  daemon.elf  dirtest.elf  echo.c  echo.elf  entry_test.c  entry_test.elf  entry_test2.c  entry_test2.elf  entry_test3.c  entry_test3.elf  fib.c  fib.elf  forktest.c  forktest.elf  fstat.elf  ftest.c  ftest.elf  head.elf  hello.c  hello.elf  idle.elf  info.c  info.elf  link.ld  ls.elf  memtest.c  memtest.elf  mkdir.c  mkdir.elf  mv.c  mv.elf  netstat.elf  posix.h  (+31 more)
programs/sbin/: shutdown.c
programs/tests/: test_fnmatch.c  test_ioctl.c  test_regex.c  test_setjmp.c  test_signals.c
projects/: musllibc  seL4_libs  seL4_tools  sel4runtime  util_libs
projects/aios/: CMakeLists.txt
ref/: AIOS_API.H  CAT.C  HELLO.C  LS.C
ref/dead_code/: blk_driver.c.bak3  echo_server.c  net_driver.c.bak3  orch_auth_cmd.inc.bak  orch_main.inc.bak  sandbox.c.old  serial_driver.c.bak2
ref/v03x/: aios.system  aios_system.json  fs_data
retro_web/status/: index.html
rnd_study/: 00_crypto_all.py  01_crypto_chacha20.py  02_entropy_collect.py  03_crypto_server.py  04_posix_crypto_hooks.py  05_cmake_fragment.py  AI_BRIEF_crypto_server.md
scripts/: aios-cc  build_apps.py  build_dash.py  build_libaios.py  build_sbase.py  build_tcc_sdk.py  build_zsh.py  bump-build.sh  bump-minor.sh  bump-patch.sh  ext2_dump.py  gen-builtins-def.py  gen_getconf.py  mkdisk.py  mksdcard.py  png_to_raw.py  posix_audit.py  qemu-boot.py  setup-linux.py  test_sbase.sh
scripts/ext2/: __init__.py  builder.py
src/: aios_auth.c  aios_log.c  aios_root.c  aios_root.c.exec_bak  aios_root.c.fs_bak  aios_root.c.pipe_bak  aios_root.c.reap_bak  aios_root.c.thread_bak  auth_server.c  blk_driver.c  echo_server.c  ext2.c  ext2.h  fs_server.c  llm_server.c  net_driver.c  net_server.c  orchestrator.c  proc_sched.h  procfs.c  sandbox.c  sandbox_kernel.c  serial_driver.c  util.c  vfs.c  vfs_server.c
src/apps/: aios_cat.c  aios_top.c  auth_server.c  blk_test.c  crash_test.c  daemon.c  diagtest.c  echo_server.c  echo_tcp.c  fbshow.c  fork_test.c  getty.c  gnu_cat.c  gnu_hello.c  hello_child.c  hwinfo.c  mini_shell.c  pipe_test.c  posix_basename.c  posix_cat.c  posix_date.c  posix_dirname.c  posix_echo.c  posix_env.c  posix_false.c  posix_grep.c  posix_head.c  posix_help.c  posix_id.c  posix_ls.c  posix_mkdir.c  posix_nice.c  posix_ps.c  posix_pwd.c  posix_rm.c  posix_sort.c  posix_tee.c  posix_test.c  posix_touch.c  posix_true.c  (+23 more)
src/arch/: arch.h
src/boot/: blk_io.c  boot_config.c  boot_display_init.c  boot_dtb.c  boot_fs_init.c  boot_log_init.c  boot_net_init.c  boot_services.c  fb_console.c  spawn_util.c
src/crypto/: crypto_chacha20.c  crypto_chacha20.h  crypto_server.c  crypto_server.h  entropy_collect.c  entropy_collect.h
src/fs/: ext2.c  fat16.c  fat32.c  vfs.c
src/lib/: aios_crt1.S  aios_crt1.c  aios_entry.c  aios_posix.c  aios_posix.c.pre_modular  aios_posix.h  termcap.c  (+13 more)
tools/: README.md  bump_build.sh  ext2_inject.py  gen_system_json.py  mkext2.py  patch_source.py  posix_audit.py  sysmap.py  system_validate.py  test.sh  train.py
(+301 files in other folders)
